14.5/backend-np.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  # - Ingress
  - Egress
  # ingress:
  # - from:
  #   - podSelector:
  #       matchLabels:
  #         app: frontend
  #   ports:
  #     - protocol: TCP
  #       port: 80
  #     - protocol: TCP
  #       port: 443

  egress:
  - to:
    - podSelector:
          matchLabels:
            app: frontend
    ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
