14.5/example-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
      - protocol: TCP
        port: 80
  - namespaceSelector:
        matchLabels:
          namespace: 14-5
  egress:
    - podSelector:
        matchLabels:
          app: backend
      ports:
      - protocol: TCP
        port: 80
    - namespaceSelector:
        matchLabels:
          namespace: 14-5

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
      - protocol: TCP
        port: 80
      - namespaceSelector:
        matchLabels:
          namespace: 14-5
  egress:
    - ipBlock:
        cidr: 0.0.0.0/0
